--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feranmi Ige - Student Portfolio</title>
+    <title>Daniel - Student Portfolio</title>
     <!-- Bootstrap CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -43,7 +43,7 @@
             <h2 class="text-center mb-4">About Me</h2>
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <img src="assets/profile.jpg" alt="Feranmi Ige" class="rounded-circle mb-3" width="200">
+                    <img src="assets/chinchilla.jpg" alt="chinchilla" class="rounded-circle mb-3" width="200">
                 </div>
                 <div class="col-md-8">
                     <p>I’m a computer science student with a love for coding, problem-solving, and building projects that make a difference. I enjoy learning new technologies and collaborating with others to turn ideas into reality.</p>
@@ -110,7 +110,7 @@
     <!-- Contact Footer -->
     <footer id="contact" class="bg-dark text-white text-center py-3">
         <div class="container">
-            <p>Contact me at: feranmi_ige@example.com | GitHub: github.com/Feranmi Ige</p>
+            <p>Contact me at: Daniel@example.com | GitHub: github.com/Daniel</p>
             <p>&copy; 2025 Feranmi Ige. All rights reserved.</p>
         </div>
     </footer>
